--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,3 +1,15 @@
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic');
+
+// Font Awesome Font 추가 
+$fa-font-path:        "../webfonts";
+// Fontawesome
+@import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
+@import "~@fortawesome/fontawesome-free/scss/solid.scss";
+@import "~@fortawesome/fontawesome-free/scss/brands.scss";
+
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
 
 // Body
 $body-bg: #f8fafc;
@@ -18,3 +30,16 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+// colors class 설정
+.blue      { color: $blue; }
+.indigo    { color: $indigo; }
+.purple    { color: $purple; }
+.pink      { color: $pink; }
+.red       { color: $red; }
+.orange    { color: $orange; }
+.orangered { color: orangered;}
+.yellow    { color: $yellow;}
+.green     { color: $green; }
+.teal      { color: $teal; }
+.cyan      { color: $cyan; }
